feat: implement note service and add swagger config (exclude large files)